--- a/ClientApp/src/ToggleSwitch/ToggleSwitch.scss
+++ b/ClientApp/src/ToggleSwitch/ToggleSwitch.scss
@@ -86,4 +86,13 @@ $white: #fff;
         right: 0px;
       }
     }
+    @media screen and (max-width: 991px) {
+        transform: scale(0.9);
+      }
+      @media screen and (max-width: 767px) {
+        transform: scale(0.825);
+      }
+      @media screen and (max-width: 575px) {
+        transform: scale(0.75);
+      }
   }
