--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-@inject SignInManager<IdentityUser> SignInManager
+@using chloe_mars_mission.Models;
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
