responsive weather widget

--- a/ClientApp/src/ToggleSwitch/ToggleSwitch.scss
+++ b/ClientApp/src/ToggleSwitch/ToggleSwitch.scss
@@ -1,6 +1,6 @@
-$label-color: #bbb;
+$label-color: rgb(223, 223, 223);
 $disabled-colour: #ddd;
-$toggle-colour: #a9e2b2;
+$toggle-colour: #8dec9b;
 $white: #fff;
 
 .toggle-switch {
