--- a/ClientApp/src/components/Home/Home.scss
+++ b/ClientApp/src/components/Home/Home.scss
@@ -1,3 +1,4 @@
+@import './src/colours.scss';
 
 .weather-widget{
     text-align: center;
@@ -5,6 +6,19 @@
 .weather-widget iframe {
     width: 800px;
     height: 530px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: $light-theme-glow;
+    border-radius: 15px;
+    margin-bottom: 15px;
+    margin-top:10px;
+    box-shadow: 0px 0px 40px 20px $light-theme-glow;
+}
+.dark-theme {
+    .weather-widget iframe{
+        border-color: $dark-theme-border;
+        box-shadow: 0px 0px 20px 20px $dark-theme-glow;
+    }
 }
 @media screen and (min-width: 999px){
     .weather-widget iframe {
