added rover selection page with dark mode compatability

--- a/ClientApp/src/colours.scss
+++ b/ClientApp/src/colours.scss
@@ -2,3 +2,15 @@ $dark-theme-border:  #9a209d;
 $dark-theme-glow: rgba(255, 41, 166, 0.603);
 $light-theme-border:  rgb(194, 134, 56);
 $light-theme-glow:  rgba(255, 91, 41, 0.425);
+$light-theme-card-background:   #f8c8cea4;
+$dark-theme-card-background: #231168;
+$light-theme-border: #f5bac9;
+$light-theme-selected-border: white;
+$dark-theme-border: #ffddf5;
+$dark-theme-selected-border: #ffdcf5;
+$light-theme-table: #fae3e3;
+$light-theme-table-border: #41283f;
+$dark-theme-table: #9c129c;
+$dark-theme-table-border: #fcf7fb;
+$dark-theme-unselected-border: rgb(156, 63, 156);
+$dark-theme-table-alt: #720072;
