--- a/ClientApp/src/components/Home/Home.scss
+++ b/ClientApp/src/components/Home/Home.scss
@@ -8,7 +8,7 @@
     height: 530px;
     border-style: solid;
     border-width: 2px;
-    border-color: $light-theme-glow;
+    border-color: $light-theme-border;
     border-radius: 15px;
     margin-bottom: 15px;
     margin-top:10px;
