--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,6 +1,6 @@
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+  color: #6817b4;
 }
 .dark-theme a {
   color: rgb(241, 182, 241);
