--- a/ClientApp/src/components/News/News.scss
+++ b/ClientApp/src/components/News/News.scss
@@ -15,6 +15,27 @@
     background-color: #ffffff;
 
 }
+.news-image {
+    text-align: center;
+    padding-bottom:5%;
+    .img{
+        border: 2px solid $light-theme-border;
+        border-radius: 15px;
+    }
+}
+.news-item {
+    border-radius: 15px;
+    border: 2px solid $light-theme-border;
+    box-shadow: 0px 0px 20px 20px $light-theme-glow;
+    background-color: #ffffff;
+    margin-bottom: 45px;
+    h1 {
+        padding:5px;
+    }
+    p {
+        padding:5px;
+    }
+}
 
 .dark-theme{
     .twitter-feed {
