--- a/ClientApp/src/components/News/News.scss
+++ b/ClientApp/src/components/News/News.scss
@@ -43,6 +43,14 @@
         box-shadow: 0px 0px 20px 20px $dark-theme-glow;
         background-color: #292f33;
     }
+    .img{
+        border-color: $dark-theme-border;
+    }
+    .news-image{
+        border-color: $dark-theme-border;
+        box-shadow: 0px 0px 20px 20px $dark-theme-glow;
+        background-color: #292f33;
+    }
 }
 @media (max-width: 770px) {
     .twitter-feeds{
