--- a/ClientApp/src/components/RoverSelection/RoverSelection.scss
+++ b/ClientApp/src/components/RoverSelection/RoverSelection.scss
@@ -12,13 +12,14 @@
     border: 5px solid $light-theme-border;
     padding: 3px;
     padding-bottom: 15px; 
-    box-shadow: 0px 0px 20px 20px $light-theme-glow;
+    box-shadow: 0px 0px 40px 5px $light-theme-glow;
     
 }
 
 @mixin iconstyle{
     border-radius: 50%; 
     border: 5px solid $light-theme-border;
+    object-fit: cover;
 }
 .imageicons{
     display: flex;
@@ -78,12 +79,12 @@ table, th, td {
     .selected-pic {
         background-color:$dark-theme-card-background;
         border: 5px solid $dark-theme-border;
-        box-shadow: 0px 0px 20px 20px $dark-theme-glow;
+        box-shadow: 0px 0px 40px 5px $dark-theme-glow;
     }
     .un-selectedpic{
         background-color:$dark-theme-card-background;
         border: 5px solid $dark-theme-border;
-        box-shadow: 0px 0px 20px 20px $dark-theme-glow;
+        box-shadow: 0px 0px 40px 5px $dark-theme-glow;
     }
     .unselected-icon{
         border: 5px solid $dark-theme-unselected-border;
@@ -107,7 +108,7 @@ table, th, td {
     }
  
 }
-@media screen and (min-width:600px) and (max-width:1201px){
+@media screen and (min-width:770px) and (max-width:1201px){
     .selected-icon{
         width: 150px;
         height: 150px;
@@ -135,15 +136,15 @@ table, th, td {
     .un-selectedpic {
         @include roverstyle;
         display: inline-block;
-        width: 33%;
-        max-width: 300px;
+        width: 45%;
+        max-width: none;
         margin-left: auto;
         margin-right: auto;
     }
     .selected-pic {
         display: inline-block;
-        width: 33%;
-        max-width: 300px;
+        width: 45%;
+        max-width: none;
         margin-left: auto;
         margin-right: auto;
     }
@@ -157,6 +158,7 @@ table, th, td {
     .roverCards{
         justify-content: space-between;
         display: flex;
+        flex-wrap: wrap;
     }
     
 }
