--- a/ClientApp/src/components/Home/APOD.scss
+++ b/ClientApp/src/components/Home/APOD.scss
@@ -20,3 +20,31 @@
         box-shadow: 0px 0px 40px 5px $dark-theme-glow;
     }
 }
+@media screen and (min-width: 1000px){
+    .APODPostContainer{
+        width: 55%;
+    }
+    .APODExplanation {
+        width: 45%;
+        padding: 10px;
+    }
+    .APODImageText{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+}
+@media screen and (min-width: 1200px){
+    .APODPostContainer{
+        width: 65%;
+    }
+    .APODExplanation {
+        width: 35%;
+        padding: 10px;
+    }
+    .APODImageText{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+}
