fixed some api issues, added individual rover pages without styling

--- a/ClientApp/src/colours.scss
+++ b/ClientApp/src/colours.scss
@@ -3,7 +3,7 @@ $dark-theme-glow: rgba(255, 41, 166, 0.603);
 $light-theme-border:  rgb(194, 134, 56);
 $light-theme-glow:  rgba(255, 91, 41, 0.425);
 $light-theme-card-background:   #f8c8cea4;
-$dark-theme-card-background: #231168;
+$dark-theme-card-background: #2e2133;
 $light-theme-border: #f5bac9;
 $light-theme-selected-border: white;
 $dark-theme-border: #ffddf5;
