--- a/ClientApp/src/components/NavMenu/NavMenu.scss
+++ b/ClientApp/src/components/NavMenu/NavMenu.scss
@@ -16,3 +16,9 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+.dark-theme{
+  .navbar-nav .dropdown-menu{
+    background-color: #2d1a35;
+    border-color: #b780c5;
+  }
+}
