--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -32,5 +32,8 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login"asp-route-returnUrl="@returnUrl">Login</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" href='/'>Back to site</a>
+        </li>
     }
 </ul>
