--- a/ClientApp/src/components/Home/Home.scss
+++ b/ClientApp/src/components/Home/Home.scss
@@ -19,6 +19,7 @@
 }
 .roverMap iframe {
     width: 90%;
+    max-width:800px;
     border-style: solid;
     border-width: 2px;
     border-color: $light-theme-border;
