--- a/ClientApp/src/components/NasaTV/NasaTV.scss
+++ b/ClientApp/src/components/NasaTV/NasaTV.scss
@@ -1,7 +1,16 @@
+@import './src/colours.scss';
+
 .wrap-element {
     position: relative;
     overflow: hidden;
     padding-top: 56.25%;
+    border-width: 2px;
+    border-color: $light-theme-border;
+    border-radius: 15px;
+    margin-bottom: 15px;
+    margin-top:10px;
+    box-shadow: 0px 0px 40px 5px $light-theme-glow;
+    border-style: solid;
   }
   
   .wrapped-iframe {
@@ -10,5 +19,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 0;
+  }
+  .dark-theme{
+      border-color: $dark-theme-border;
+      box-shadow: 0px 0px 40px 5px $dark-theme-glow;
   }
