--- a/Pages/Shared/_LoginPartial.cshtml
+++ b/Pages/Shared/_LoginPartial.cshtml
@@ -23,6 +23,10 @@
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
         </li>
+        <li class="nav-item">
+            <a class="nav-link text-dark" href="/">Back to site</a>
+        </li>
+        
     }
     else
     {
@@ -33,7 +37,7 @@
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login"asp-route-returnUrl="@returnUrl">Login</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href='/'>Back to site</a>
+            <a class="nav-link text-dark" href="/">Back to site</a>
         </li>
     }
 </ul>
