--- a/ClientApp/src/components/NasaTV/NasaTV.scss
+++ b/ClientApp/src/components/NasaTV/NasaTV.scss
@@ -21,6 +21,8 @@
     height: 100%;
   }
   .dark-theme{
-      border-color: $dark-theme-border;
-      box-shadow: 0px 0px 40px 5px $dark-theme-glow;
+      .wrap-element{
+        border-color: $dark-theme-border;
+        box-shadow: 0px 0px 40px 5px $dark-theme-glow;
+      }
   }
