--- a/ClientApp/src/components/News/News.scss
+++ b/ClientApp/src/components/News/News.scss
@@ -13,15 +13,14 @@
     border: 2px solid $light-theme-border;
     box-shadow: 0px 0px 40px 5px $light-theme-glow;
     background-color: #ffffff;
-
 }
 .news-image {
     text-align: center;
     padding-bottom:5%;
-    .img{
-        border: 2px solid $light-theme-border;
-        border-radius: 15px;
-    }
+}
+.news-image img{
+    border: 2px solid $light-theme-border;
+    border-radius: 15px;
 }
 .news-item {
     border-radius: 15px;
@@ -30,10 +29,14 @@
     background-color: #ffffff;
     margin-bottom: 45px;
     h1 {
-        padding:5px;
+        padding:15px;
     }
     p {
-        padding:5px;
+        padding:15px;
+    }
+    span {
+        color: #0000008c;
+        padding-left: 20px;
     }
 }
 
@@ -43,13 +46,17 @@
         box-shadow: 0px 0px 40px 5px $dark-theme-glow;
         background-color: #292f33;
     }
-    .img{
+    .news-image img{
         border-color: $dark-theme-border;
     }
-    .news-image{
+    .news-item{
+        background-color: #292f33;
         border-color: $dark-theme-border;
         box-shadow: 0px 0px 40px 5px $dark-theme-glow;
-        background-color: #292f33;
+        span {
+            color: #ffffffad;
+            padding-left: 20px;
+        }
     }
 }
 @media (max-width: 770px) {
