--- a/ClientApp/src/components/Rovers/Rovers.scss
+++ b/ClientApp/src/components/Rovers/Rovers.scss
@@ -33,12 +33,23 @@
    width:30%;
    max-width: 260px;
    border-style: solid;
-   border-width: 2px;
+   border-width: 4px;
    border-color: $light-theme-border;
    border-radius: 15px;
    margin: 5px;
    margin-top:10px;
    box-shadow: 0px 0px 40px 5px $light-theme-glow;
+}
+.selected-img-rover-photo-list{
+    width:30%;
+    max-width: 260px;
+    border-style: solid;
+    border-width: 4px;
+    border-color: $light-theme-selected-border;
+    border-radius: 15px;
+    margin: 5px;
+    margin-top:10px;
+    box-shadow: 0px 0px 40px 5px $light-theme-glow;
 }
 .dark-theme {
     .top-rover-div{
@@ -48,13 +59,21 @@
         }
     }
     .img-rover-photo-list{
-       border-color: $dark-theme-border;
+       border-color: $dark-theme-unselected-border;
        box-shadow: 0px 0px 40px 5px $dark-theme-glow;
+    }
+    .selected-img-rover-photo-list{
+        border-color: $dark-theme-selected-border;
+        box-shadow: 0px 0px 40px 5px $dark-theme-glow;
     }
 }
 @media (min-width: 1190px) {
     .img-rover-photo-list{
         max-width: 170px;
+        margin-bottom: 20px;
+    }
+    .selected-img-rover-photo-list{
+        max-width: 185px;
         margin-bottom: 20px;
     }
     .rover-date-top-padding{
